kubernetes.tpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-streaming-app-deployment
  namespace: dev
  labels:
    app: video-streaming-app
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-streaming-app
  template:
    metadata:
      labels:
        app: video-streaming-app
        version: COMMIT_SHA
        environment: dev
    spec:
      serviceAccountName: video-streaming-app-account
      containers:
        - name: video-streaming-app
          image: gcr.io/GOOGLE_CLOUD_PROJECT/video-streaming-app:COMMIT_SHA
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: "0.1"
              memory: 0.5Gi
#          readinessProbe:
#            httpGet:
#              path: /api-cms/actuator/health
#              port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: video-streaming-app-service
  namespace: dev
  labels:
    app: video-streaming-app
    environment: dev
spec:
  type: NodePort
  ports:
    - name: video-streaming-app
      port: 80
  selector:
    app: video-streaming-app

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: video-streaming-virtual-service
  namespace: dev
  labels:
    app: video-streaming-app
    environment: dev
spec:
  hosts:
    - "video.streaming.org"
  gateways:
    - istio-system/dev-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: video-streaming-app-service

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: video-streaming-db
  namespace: dev
spec:
  addresses:
    - 10.253.16.3
  hosts:
    - video-streaming-db
  location: MESH_EXTERNAL
  ports:
    - name: TCP-video-streaming-db
      number: 3306
      protocol: TCP
